Fixed logo font var not showing

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
+:root {
+  --LOGO-FONT: 'Courier New', Courier, monospace;
+  font-family: 'Inter', sans-serif;
+
+}
+
 * {
   padding: 0; margin: 0;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
 }
+
+
 
 
 /* | Blocks */
@@ -33,13 +40,14 @@ header {
   gap: 1em;
   margin-right: auto;
 }
+
 .header-logo {
   display: flex;
   flex-direction: column;
   text-align: center;
   width: 100px;
   margin-right: 220px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: var(--LOGO-FONT);
   font-size: 1.5em;
   transition: color 1s;
 }
